--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang+"pt-br">
+<html lang="pt-br">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>hello</title>
     <meta name="description" content="">
     <meta>
-    <link rel="stylesheet" href="estilos/estilo.css">
+    <link rel="stylesheet" href="estilo.css">
   </head>
   <body>
     <h1>olá mundo</h1>
