--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>hello</title>
     <meta name="description" content="">
     <meta>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" type="text/css" href="estilo.css">
   </head>
   <body>
     <h1>olá mundo</h1>
